@@ -55,6 +55,12 @@ local filterConditions = {
     ["completedInTime"] = function(entry, value)
         return entry["completedInTime"] == value
     end,
+    ["outOfTime"] = function(entry, value)
+        if entry["completedInTime"] == value and entry["completed"] == true then return true end
+    end,
+    ["failed"] = function(entry, value)
+        return entry["completed"] == value
+    end,
     ["time"] = function(entry, value)
         local res = entry["time"] or 0
         return res >= value
@@ -93,30 +99,26 @@ local filterConditions = {
     end
 }
 
-function FilterData(tbl, key, value)
-    if #key == 0 and #value == 0 then return tbl end
-    local result = {}
-
-    -- Argument cleaning
+local function cleanFilterArgs(key, value)
     local _key = string.lower(key)
     if _key == "player" and #value == 0 then
         value = UnitName("player")
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif #_key <= 3 and #value == 0 then
         value = Defaults.dungeonNamesShort[key]
-        if not value then return noResult() end
+        if not value then return nil, nil end
         _key = "name"
-        Log(string.format("FILTER <%s> <%s>", _key, tostring(value)))
     elseif _key == "completed" then
         value = true
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
-    elseif _key == "intime" then
+    elseif _key == "intime" or _key == "completedintime" then
         _key = "completedInTime"
         value = true
-        Log(string.format("FILTER <%s> <%s>", _key, tostring(value)))
+    elseif _key == "outoftime" then
+        _key = "outOfTime"
+        value = false
+    elseif _key == "failed" then
+        value = false
     elseif _key == "time" or _key == "deathsgt" or _key == "deathslt" or _key == "level" then
         value = tonumber(value) or 0
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif _key == "affix" and #value ~= 0 then
         local values = {}
         Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
@@ -130,31 +132,39 @@ function FilterData(tbl, key, value)
             table.insert(values, string.lower(substring))
         end
         value = values
-    elseif _key == "player" then
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif _key == "season" then
         if #value == 0 then value = Defaults.dungeonDefault.season end
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif _key == "date" then
         if #value == 0 then value = date(Defaults.dateFormat) end
-        Log(string.format("FILTER <%s> <%s>", key, tostring(value)))
     elseif _key == "role" then
         printf("Role filter is not yet implemented!", Defaults.colors.chatWarning)
-        return nil
+        return nil, nil
     end
+    if _key ~= "affix" then
+        Log(string.format("FILTER <%s> <%s>", _key, tostring(value)))
+    end
+    return _key, value
+end
+
+function FilterData(tbl, key, value)
+    if #key == 0 and #value == 0 then return tbl end
+    local result = {}
+
+    local _key, _value = cleanFilterArgs(key, value)
+    if not _key and not _value then return noResult() end
 
     -- Table filtering
     for _, entry in ipairs(tbl) do
         if _key == "season" and entry[_key] ~= nil then
-            if value == "all" then
+            if _value == "all" then
                 table.insert(result, entry)
-            elseif string.lower(entry[_key]) == string.lower(value) then
+            elseif string.lower(entry[_key]) == string.lower(_value) then
                 table.insert(result, entry)
             end
         elseif entry["season"] == Defaults.dungeonDefault.season then
             for conditionKey, conditionFunc in pairs(filterConditions) do
                 if _key == conditionKey then
-                    if conditionFunc(entry, value) then
+                    if conditionFunc(entry, _value) then
                         table.insert(result, entry)
                     end
                 end
@@ -176,4 +186,18 @@ FilterFunc = {
     list = filterDungeons,
     filter = filterDungeons,
     rate = fRate
+}
+
+FilterKeys = {
+    ["alldata"] = { key = "alldata", value = "", name = "All data" },
+    ["player"] = { key = "player", value = "player", name = "Player" },
+    ["dungeon"] = { key = "dungeon", value = "name", name = "Dungeon" },
+    ["season"] = { key = "season", value = "season", name = "Season" },
+    ["completed"] = { key = "completed", value = "completed", name = "Completed" },
+    ["inTime"] = { key = "inTime", value = "completedInTime", name = "Completed in time" },
+    ["outTime"] = { key = "outTime", value = "outOfTime", name = "Completed out of time" },
+    ["failed"] = { key = "failed", value = "failed", name = "Abandoned" },
+    ["time"] = { key = "time", value = "time", name = "Time" },
+    ["date"] = { key = "date", value = "date", name = "Date" },
+    ["affix"] = { key = "affix", value = "affix", name = "Affixes" },
 }
